shared/src/test/data/yeast/invalid-json/unquoted-key-last.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'ccc'
Indicator           8,  2,  6 '\"'
EndScalar           9,  2,  7 ''
Indicator           9,  2,  7 ':'
WhiteSpace         10,  2,  8 ' '
BeginScalar        11,  2,  9 ''
Indicator          11,  2,  9 '\"'
Text               12,  2, 10 'hh'
Indicator          14,  2, 12 '\"'
EndScalar          15,  2, 13 ''
Indicator          15,  2, 13 ','
LineBreak          16,  2, 14 '\n'
WhiteSpace         17,  3,  0 '  '
Error              19,  3,  2 'abb'
Indicator          22,  3,  5 ':'
WhiteSpace         23,  3,  6 ' '
BeginScalar        24,  3,  7 ''
Indicator          24,  3,  7 '\"'
Text               25,  3,  8 'aa'
Indicator          27,  3, 10 '\"'
EndScalar          28,  3, 11 ''
LineBreak          28,  3, 11 '\n'
EndMapping         29,  4,  0 '}'
